engine/scripting/native_api/dse_api.gen.h

DSE_CAPI_GEN void  dse_post_process_set_light_shaft_exposure(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_light_shaft_intensity(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_light_shaft_intensity(uint32_t e, float v);
DSE_CAPI_GEN int  dse_post_process_get_light_shaft_samples(uint32_t e);
DSE_CAPI_GEN void dse_post_process_set_light_shaft_samples(uint32_t e, int v);
DSE_CAPI_GEN int  dse_post_process_get_fog_enabled(uint32_t e);
DSE_CAPI_GEN void dse_post_process_set_fog_enabled(uint32_t e, int v);
DSE_CAPI_GEN void dse_post_process_get_fog_color(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_post_process_set_fog_color(uint32_t e, float x, float y, float z);
DSE_CAPI_GEN float dse_post_process_get_fog_density(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_fog_density(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_fog_height_falloff(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_fog_height_falloff(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_fog_height_offset(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_fog_height_offset(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_fog_start(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_fog_start(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_fog_end(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_fog_end(uint32_t e, float v);
DSE_CAPI_GEN int  dse_post_process_get_fog_steps(uint32_t e);
DSE_CAPI_GEN void dse_post_process_set_fog_steps(uint32_t e, int v);
DSE_CAPI_GEN float dse_post_process_get_fog_sun_scatter(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_fog_sun_scatter(uint32_t e, float v);
/* ---- Animator3DComponent ---- */
DSE_CAPI_GEN int  dse_animator3d_get_enabled(uint32_t e);
DSE_CAPI_GEN void dse_animator3d_set_enabled(uint32_t e, int v);
DSE_CAPI_GEN void dse_animator3d_set_danim_path(uint32_t e, const char* v);
DSE_CAPI_GEN int  dse_animator3d_get_danim_path(uint32_t e, char* buf, int buf_size);
DSE_CAPI_GEN void dse_animator3d_set_dskel_path(uint32_t e, const char* v);
DSE_CAPI_GEN int  dse_animator3d_get_dskel_path(uint32_t e, char* buf, int buf_size);
DSE_CAPI_GEN float dse_animator3d_get_speed(uint32_t e);
DSE_CAPI_GEN void  dse_animator3d_set_speed(uint32_t e, float v);
DSE_CAPI_GEN int  dse_animator3d_get_loop(uint32_t e);
DSE_CAPI_GEN void dse_animator3d_set_loop(uint32_t e, int v);
DSE_CAPI_GEN int  dse_animator3d_get_use_anim_tree(uint32_t e);
DSE_CAPI_GEN void dse_animator3d_set_use_anim_tree(uint32_t e, int v);
DSE_CAPI_GEN void dse_animator3d_set_blend_parameter(uint32_t e, const char* v);
DSE_CAPI_GEN int  dse_animator3d_get_blend_parameter(uint32_t e, char* buf, int buf_size);
DSE_CAPI_GEN float dse_animator3d_get_blend_parameter_value(uint32_t e);
DSE_CAPI_GEN void  dse_animator3d_set_blend_parameter_value(uint32_t e, float v);
/* ---- DecalComponent ---- */
DSE_CAPI_GEN int  dse_decal_get_enabled(uint32_t e);
DSE_CAPI_GEN void dse_decal_set_enabled(uint32_t e, int v);
DSE_CAPI_GEN void dse_decal_get_color(uint32_t e, float* x, float* y, float* z, float* w);
DSE_CAPI_GEN void dse_decal_set_color(uint32_t e, float x, float y, float z, float w);
DSE_CAPI_GEN float dse_decal_get_angle_fade(uint32_t e);
DSE_CAPI_GEN void  dse_decal_set_angle_fade(uint32_t e, float v);
/* ---- SkyboxComponent ---- */
DSE_CAPI_GEN int  dse_skybox_get_enabled(uint32_t e);
DSE_CAPI_GEN void dse_skybox_set_enabled(uint32_t e, int v);
DSE_CAPI_GEN void dse_skybox_set_cubemap_path(uint32_t e, const char* v);
DSE_CAPI_GEN int  dse_skybox_get_cubemap_path(uint32_t e, char* buf, int buf_size);
/* ---- FreeCameraControllerComponent ---- */
DSE_CAPI_GEN int  dse_free_camera_get_enabled(uint32_t e);
DSE_CAPI_GEN void dse_free_camera_set_enabled(uint32_t e, int v);
DSE_CAPI_GEN float dse_free_camera_get_move_speed(uint32_t e);
DSE_CAPI_GEN void  dse_free_camera_set_move_speed(uint32_t e, float v);
DSE_CAPI_GEN float dse_free_camera_get_mouse_sensitivity(uint32_t e);
DSE_CAPI_GEN void  dse_free_camera_set_mouse_sensitivity(uint32_t e, float v);
DSE_CAPI_GEN float dse_free_camera_get_pitch(uint32_t e);
DSE_CAPI_GEN void  dse_free_camera_set_pitch(uint32_t e, float v);
DSE_CAPI_GEN float dse_free_camera_get_yaw(uint32_t e);
DSE_CAPI_GEN void  dse_free_camera_set_yaw(uint32_t e, float v);
/* ---- SubSceneComponent ---- */
DSE_CAPI_GEN int  dse_sub_scene_get_enabled(uint32_t e);
DSE_CAPI_GEN void dse_sub_scene_set_enabled(uint32_t e, int v);
DSE_CAPI_GEN void dse_sub_scene_set_scene_path(uint32_t e, const char* v);
DSE_CAPI_GEN int  dse_sub_scene_get_scene_path(uint32_t e, char* buf, int buf_size);
/* ---- BoundingBoxComponent ---- */
DSE_CAPI_GEN void dse_bounding_box_get_min_extents(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_bounding_box_set_min_extents(uint32_t e, float x, float y, float z);
DSE_CAPI_GEN void dse_bounding_box_get_max_extents(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_bounding_box_set_max_extents(uint32_t e, float x, float y, float z);
/* ---- WaterComponent ---- */
DSE_CAPI_GEN int  dse_water_get_enabled(uint32_t e);
DSE_CAPI_GEN void dse_water_set_enabled(uint32_t e, int v);
DSE_CAPI_GEN float dse_water_get_water_level(uint32_t e);
DSE_CAPI_GEN void  dse_water_set_water_level(uint32_t e, float v);
DSE_CAPI_GEN void dse_water_get_deep_color(uint32_t e, float* x, float* y, float* z, float* w);
DSE_CAPI_GEN void dse_water_set_deep_color(uint32_t e, float x, float y, float z, float w);