GameScripts/DSEngine.Runtime/Generated/Native.gen.cs


    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_light_shaft_exposure")]
    internal static partial void dse_post_process_set_light_shaft_exposure(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_light_shaft_intensity")]
    internal static partial float dse_post_process_get_light_shaft_intensity(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_light_shaft_intensity")]
    internal static partial void dse_post_process_set_light_shaft_intensity(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_light_shaft_samples")]
    internal static partial int dse_post_process_get_light_shaft_samples(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_light_shaft_samples")]
    internal static partial void dse_post_process_set_light_shaft_samples(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_fog_enabled")]
    internal static partial int dse_post_process_get_fog_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_fog_enabled")]
    internal static partial void dse_post_process_set_fog_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_fog_color")]
    internal static partial void dse_post_process_get_fog_color(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_fog_color")]
    internal static partial void dse_post_process_set_fog_color(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_fog_density")]
    internal static partial float dse_post_process_get_fog_density(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_fog_density")]
    internal static partial void dse_post_process_set_fog_density(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_fog_height_falloff")]
    internal static partial float dse_post_process_get_fog_height_falloff(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_fog_height_falloff")]
    internal static partial void dse_post_process_set_fog_height_falloff(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_fog_height_offset")]
    internal static partial float dse_post_process_get_fog_height_offset(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_fog_height_offset")]
    internal static partial void dse_post_process_set_fog_height_offset(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_fog_start")]
    internal static partial float dse_post_process_get_fog_start(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_fog_start")]
    internal static partial void dse_post_process_set_fog_start(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_fog_end")]
    internal static partial float dse_post_process_get_fog_end(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_fog_end")]
    internal static partial void dse_post_process_set_fog_end(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_fog_steps")]
    internal static partial int dse_post_process_get_fog_steps(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_fog_steps")]
    internal static partial void dse_post_process_set_fog_steps(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_fog_sun_scatter")]
    internal static partial float dse_post_process_get_fog_sun_scatter(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_fog_sun_scatter")]
    internal static partial void dse_post_process_set_fog_sun_scatter(uint e, float v);

    // ---- Animator3DComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_animator3d_get_enabled")]
    internal static partial int dse_animator3d_get_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_animator3d_set_enabled")]
    internal static partial void dse_animator3d_set_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_animator3d_set_danim_path", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_animator3d_set_danim_path(uint e, string v);

    [LibraryImport(Lib, EntryPoint = "dse_animator3d_get_danim_path")]
    internal static partial int dse_animator3d_get_danim_path(uint e, [Out] byte[] buf, int bufSize);

    [LibraryImport(Lib, EntryPoint = "dse_animator3d_set_dskel_path", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_animator3d_set_dskel_path(uint e, string v);

    [LibraryImport(Lib, EntryPoint = "dse_animator3d_get_dskel_path")]
    internal static partial int dse_animator3d_get_dskel_path(uint e, [Out] byte[] buf, int bufSize);

    [LibraryImport(Lib, EntryPoint = "dse_animator3d_get_speed")]
    internal static partial float dse_animator3d_get_speed(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_animator3d_set_speed")]
    internal static partial void dse_animator3d_set_speed(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_animator3d_get_loop")]
    internal static partial int dse_animator3d_get_loop(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_animator3d_set_loop")]
    internal static partial void dse_animator3d_set_loop(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_animator3d_get_use_anim_tree")]
    internal static partial int dse_animator3d_get_use_anim_tree(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_animator3d_set_use_anim_tree")]
    internal static partial void dse_animator3d_set_use_anim_tree(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_animator3d_set_blend_parameter", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_animator3d_set_blend_parameter(uint e, string v);

    [LibraryImport(Lib, EntryPoint = "dse_animator3d_get_blend_parameter")]
    internal static partial int dse_animator3d_get_blend_parameter(uint e, [Out] byte[] buf, int bufSize);

    [LibraryImport(Lib, EntryPoint = "dse_animator3d_get_blend_parameter_value")]
    internal static partial float dse_animator3d_get_blend_parameter_value(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_animator3d_set_blend_parameter_value")]
    internal static partial void dse_animator3d_set_blend_parameter_value(uint e, float v);

    // ---- DecalComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_decal_get_enabled")]
    internal static partial int dse_decal_get_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_decal_set_enabled")]
    internal static partial void dse_decal_set_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_decal_get_color")]
    internal static partial void dse_decal_get_color(uint e, out float x, out float y, out float z, out float w);

    [LibraryImport(Lib, EntryPoint = "dse_decal_set_color")]
    internal static partial void dse_decal_set_color(uint e, float x, float y, float z, float w);

    [LibraryImport(Lib, EntryPoint = "dse_decal_get_angle_fade")]
    internal static partial float dse_decal_get_angle_fade(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_decal_set_angle_fade")]
    internal static partial void dse_decal_set_angle_fade(uint e, float v);

    // ---- SkyboxComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_skybox_get_enabled")]
    internal static partial int dse_skybox_get_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_skybox_set_enabled")]
    internal static partial void dse_skybox_set_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_skybox_set_cubemap_path", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_skybox_set_cubemap_path(uint e, string v);

    [LibraryImport(Lib, EntryPoint = "dse_skybox_get_cubemap_path")]
    internal static partial int dse_skybox_get_cubemap_path(uint e, [Out] byte[] buf, int bufSize);

    // ---- FreeCameraControllerComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_free_camera_get_enabled")]
    internal static partial int dse_free_camera_get_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_free_camera_set_enabled")]
    internal static partial void dse_free_camera_set_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_free_camera_get_move_speed")]
    internal static partial float dse_free_camera_get_move_speed(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_free_camera_set_move_speed")]
    internal static partial void dse_free_camera_set_move_speed(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_free_camera_get_mouse_sensitivity")]
    internal static partial float dse_free_camera_get_mouse_sensitivity(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_free_camera_set_mouse_sensitivity")]
    internal static partial void dse_free_camera_set_mouse_sensitivity(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_free_camera_get_pitch")]
    internal static partial float dse_free_camera_get_pitch(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_free_camera_set_pitch")]
    internal static partial void dse_free_camera_set_pitch(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_free_camera_get_yaw")]
    internal static partial float dse_free_camera_get_yaw(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_free_camera_set_yaw")]
    internal static partial void dse_free_camera_set_yaw(uint e, float v);

    // ---- SubSceneComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_sub_scene_get_enabled")]
    internal static partial int dse_sub_scene_get_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_sub_scene_set_enabled")]
    internal static partial void dse_sub_scene_set_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_sub_scene_set_scene_path", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_sub_scene_set_scene_path(uint e, string v);

    [LibraryImport(Lib, EntryPoint = "dse_sub_scene_get_scene_path")]
    internal static partial int dse_sub_scene_get_scene_path(uint e, [Out] byte[] buf, int bufSize);

    // ---- BoundingBoxComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_bounding_box_get_min_extents")]
    internal static partial void dse_bounding_box_get_min_extents(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_bounding_box_set_min_extents")]
    internal static partial void dse_bounding_box_set_min_extents(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_bounding_box_get_max_extents")]
    internal static partial void dse_bounding_box_get_max_extents(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_bounding_box_set_max_extents")]
    internal static partial void dse_bounding_box_set_max_extents(uint e, float x, float y, float z);

    // ---- WaterComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_water_get_enabled")]
    internal static partial int dse_water_get_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_water_set_enabled")]
    internal static partial void dse_water_set_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_water_get_water_level")]
    internal static partial float dse_water_get_water_level(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_water_set_water_level")]
    internal static partial void dse_water_set_water_level(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_water_get_deep_color")]
    internal static partial void dse_water_get_deep_color(uint e, out float x, out float y, out float z, out float w);

    [LibraryImport(Lib, EntryPoint = "dse_water_set_deep_color")]
    internal static partial void dse_water_set_deep_color(uint e, float x, float y, float z, float w);
